# tinker

./: .env.example  .gitignore  .prettierrc  AGENTS.md  CLAUDE.md  PROMPT.md  README.md  eslint.config.mjs  opencode.json  package.json  pnpm-lock.yaml  ramp-glass-prd.md  tinker-prd.md  tsconfig.base.json  tsconfig.json
.claude/: settings.json
.claude/agents/: elon-reviewer.md
.conductor/: README.md  conductor.json
.github/: copilot-instructions.md
agent-knowledge/: README.md
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/permissions/: allow-folder-picker.toml  allow-get-opencode-connection.toml  allow-mcp-secret-keychain.toml  allow-oauth-flow.toml  allow-refresh-token-keychain.toml
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: acp_agent.rs  auth.rs  codex_oauth.rs  dialog.rs  keychain.rs  memory.rs  mod.rs  oauth.rs  opencode.rs
apps/desktop/src-tauri/tests/: opencode_health_test.rs
demo-flow/: README.md  package.json  pnpm-lock.yaml
docs/: README.md  auth-architecture.md  decisions.md  development.md  distribution-signing.md  enterprise-fork-guide.md  model-picker-parity.md  mvp-verification.md  release-pipeline.md  saml-adapter.md
dojo/: README.md
knowledge/: README.md
script/: check-typography-tokens.sh
tasks/: README.md  agent-runtime.md  auth.md  dojo-web.md  e2e.md  foundation.md  glass-bridge.md  integrations.md  memory.md  scheduler.md  skills.md  slack-bot.md  workspace-polish.md
(+538 files in other folders)
